--- a/index.html
+++ b/index.html
@@ -26,8 +26,32 @@
                                 <img src="./images/logo.png" class="img-fluid logo" alt="logo">
                             </a>
 
-                            <div class="collapse navbar-collapse">
-                                
+                            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                                <div class="menu-main-menu-container">
+                                    <ul id="top-menu" class="navbar-nav ml-auto">
+                                        <li class="menu-item"><a href="#">Home</a></li>
+
+                                        <li class="menu-item"><a href="#">Tv Shows</a>
+                                            <ul class="sub-menu">
+                                                <li class="menu-item"><a href="#">Complete Shows</a></li>
+                                                <li class="menu-item"><a href="#">InComplete Shows</a></li>
+                                            </ul>
+                                        </li>
+
+                                        <li class="menu-item"><a href="#">Movies</a>
+                                            <ul class="sub-menu">
+                                                <li class="menu-item"><a href="#">Action</a></li>
+                                                <li class="menu-item"><a href="#">Romance</a></li>
+                                                <li class="menu-item"><a href="#">Horror</a></li>
+                                                <li class="menu-item"><a href="#">Animi</a></li>
+                                                <li class="menu-item"><a href="#">Documentry</a></li>
+                                                <li class="menu-item"><a href="#">Thriller</a></li>
+                                                <li class="menu-item"><a href="#">Fantacy And Comady</a></li>
+                                            </ul>
+                                        </li>
+                                        <li class="menu-item"><a href="#">Contact Us</a></li>
+                                    </ul>
+                                </div>
                             </div>
                         </div>
                     </div>
