--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
     <!-- styles -->
      <link rel="stylesheet" href="./css/bootstrap.min.css">
-     <link rel="stylesheet" href="./css/Style.css">
+
      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css" integrity="sha512-5A8nwdMOWrSz20fDsjczgUidUBR8liPYU+WymTZP1lmY9G6Oc7HlZv156XqnsgNUzTyMefFTcsFH/tnJE/+xBg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 
 </head>
@@ -60,6 +60,74 @@
                                 </div>
                             </div>
 
+                            <div class="mobile-more-menue">
+                                <a href="javascript:void(0)" class="more-toggle" id="dropdownMenuButton"
+                                data-toggle="more-toggle" aria-haspopup="true" aria-expanded="false">
+                                    <i class="fa fa-ellipsis-h"></i>
+                                </a>
+                                
+                                <div class="more-menu" aria-labelledby="dropdownMenuButton">
+                                    <div class="navbar-right position-relative">
+                                        <ul class="d-flex align-items-center justify-content-end list-inline m-0">
+                                            <li>
+                                                <a href="#" class="search-toggle">
+                                                    <i class="fa fa-search"></i>
+                                                </a>
+                                                <div class="search-box iq-search-bar">
+                                                    <form action="#" class="searchbox">
+                                                        <div class="form-group position-relative">
+                                                            <input type="text" class="text search-input font-size-12" placeholder="Search Now">
+                                                            <i class="search-link fa fa-search"></i>
+                                                        </div>
+                                                    </form>
+                                                </div>
+                                            </li>
+
+                                            <li class="nav-item nav-icon">
+                                                <a href="#" class="search-toggle position-relative">
+                                                    <i class="fa fa-bell"></i>
+                                                    <span class="bg-danger dots"></span>
+                                                </a>
+                                                <div class="iq-sub-dropdown">
+                                                    <div class="iq-card shadow-none m-0">
+                                                        <div class="iq-card-body">
+                                                            <a href="#" class="iq-sub-card">
+                                                                <div class="media align-items-center">
+                                                                    <img src="./images/notify/thumb-1.jpg" alt="" class="img-fluid mr-3">
+                                                                    <div class="media-body">
+                                                                        <h6 class="mb-0">Captain Marvel</h6>
+                                                                        <small class="font-size-12">just now</small>
+                                                                    </div>
+                                                                </div>
+                                                            </a>
+
+                                                            <a href="#" class="iq-sub-card">
+                                                                <div class="media align-items-center">
+                                                                    <img src="./images/notify/thumb-2.jpg" alt="" class="img-fluid mr-3">
+                                                                    <div class="media-body">
+                                                                        <h6 class="mb-0">Dora and the lost city of gold</h6>
+                                                                        <small class="font-size-12">25Mins ago</small>
+                                                                    </div>
+                                                                </div>
+                                                            </a>
+
+                                                            <a href="#" class="iq-sub-card">
+                                                                <div class="media align-items-center">
+                                                                    <img src="./images/notify/thumb-3.jpg" alt="" class="img-fluid mr-3">
+                                                                    <div class="media-body">
+                                                                        <h6 class="mb-0">Captain  2</h6>
+                                                                        <small class="font-size-12">1h and 30Mins ago</small>
+                                                                    </div>
+                                                                </div>
+                                                            </a>
+                                                        </div>
+                                                    </div>
+                                                </div>
+                                            </li>
+                                        </ul>
+                                    </div>
+                                </div>
+                            </div>
 
                         </div>
                     </div>
