--- a/index.html
+++ b/index.html
@@ -124,6 +124,23 @@
                                                     </div>
                                                 </div>
                                             </li>
+
+                                            <li>
+                                                <a href="#" class="iq-user-dropdown search-toggle d-flex align-items-center">
+                                                    <img src="./images/user/user.png" alt="" class="img-fluid user-m rounded-circle">
+                                                </a>
+                                                <div class="iq-sub-dropdown iq-user-dropdown">
+                                                    <div class="iq-card-body p-0 pl-3 pr-3">
+                                                        <a href="#" class="iq-sub-card setting-dropdown">
+                                                            <div class="media align-items-center">
+                                                                <div class="right-icon">
+                                                                    <i class="fa fa-user text-primary"></i>
+                                                                </div>
+                                                            </div>
+                                                        </a>
+                                                    </div>
+                                                </div>
+                                            </li>
                                         </ul>
                                     </div>
                                 </div>
