--- a/index.html
+++ b/index.html
@@ -136,6 +136,42 @@
                                                                 <div class="right-icon">
                                                                     <i class="fa fa-user text-primary"></i>
                                                                 </div>
+                                                                <div class="media-body ml-3">
+                                                                    <h6 class="mb-0">Manage Profile</h6>
+                                                                </div>
+                                                            </div>
+                                                        </a>
+
+                                                        <a href="#" class="iq-sub-card setting-dropdown">
+                                                            <div class="media align-items-center">
+                                                                <div class="right-icon">
+                                                                    <i class="fa fa-cog text-primary"></i>
+                                                                </div>
+                                                                <div class="media-body ml-3">
+                                                                    <h6 class="mb-0">Settings</h6>
+                                                                </div>
+                                                            </div>
+                                                        </a>
+
+                                                        <a href="#" class="iq-sub-card setting-dropdown">
+                                                            <div class="media align-items-center">
+                                                                <div class="right-icon">
+                                                                    <i class="fa fa-inr text-primary"></i>
+                                                                </div>
+                                                                <div class="media-body ml-3">
+                                                                    <h6 class="mb-0">Profile Settings</h6>
+                                                                </div>
+                                                            </div>
+                                                        </a>
+
+                                                        <a href="#" class="iq-sub-card setting-dropdown">
+                                                            <div class="media align-items-center">
+                                                                <div class="right-icon">
+                                                                    <i class="fa fa-sign-out text-primary"></i>
+                                                                </div>
+                                                                <div class="media-body ml-3">
+                                                                    <h6 class="mb-0">Sign Out</h6>
+                                                                </div>
                                                             </div>
                                                         </a>
                                                     </div>
